Version refresh for AspectJ examples